# pysplit

./: .gitignore  README.md  pyproject.toml
monosplit/: __main__.py  split.py
pysplit/: __main__.py  split.py
tests/: test_pysplit.py
tests/data/: testsplitfile.py
