[project]
name = "monosplit"
version = "0.1.1"
description = ""
authors = [{"name" = "Grayson Miller", "email" = "grayson.miller124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.scripts]
pysplit = "pysplit.__main__:main"
